<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>AgileAutomation</groupId>
  <artifactId>agile-automation</artifactId>
  <version>0.0.1-SNAPSHOT</version>
  <name>AgileAutomationFramework</name>

  <build>

    <!--        <sourceDirectory>src</sourceDirectory> -->
    <!--          <directory>target</directory> -->
    <!--        <outputDirectory>target</outputDirectory> -->
    <!--        <testOutputDirectory>target</testOutputDirectory> -->


    <filters>
      <filter>application.properties</filter>
    </filters>



    <pluginManagement>
      <plugins>
        <plugin>
          <artifactId>maven-compiler-plugin</artifactId>
          <version>3.1</version>
          <configuration>
            <source>1.8</source>
            <target>1.8</target>
          </configuration>
        </plugin>
        <plugin>
          <groupId>org.codehaus.mojo</groupId>
          <artifactId>properties-maven-plugin</artifactId>
          <version>1.0-alpha-2</version>
          <configuration>
            <files>
              <file>${basedir}/application.properties</file>
            </files>
            <outputFile>
              ${basedir}/application.properties
            </outputFile>
          </configuration>
          <executions>
            <execution>
              <phase>initialize</phase>
              <goals>
                <goal>read-project-properties</goal>
                <goal>write-project-properties</goal>
              </goals>
            </execution>
          </executions>
        </plugin>


        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-failsafe-plugin</artifactId>
          <version>2.11</version>

        </plugin>

        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-surefire-plugin</artifactId>
          <version>2.22.0</version>
        </plugin>
        <!--                  <plugin> -->
        <!--                      <groupId>org.codehaus.mojo</groupId> -->
        <!--                      <artifactId>exec-maven-plugin</artifactId> -->
        <!--                      <version>1.3.2</version> -->
        <!--                      <executions> -->
        <!--                          <execution> -->
        <!--                              <phase>post-integration-test</phase> -->
        <!--                              <goals> -->
        <!--                                  <goal>java</goal> -->
        <!--                              </goals> -->
        <!--                          </execution> -->
        <!--                      </executions> -->
        <!--                      <configuration> -->
        <!--                          <mainClass>main.java.framework.Report</mainClass> -->
        <!--                      </configuration> -->
        <!--                  </plugin> -->
        <!--                  <plugin> -->
        <!--                      <groupId>net.masterthought</groupId> -->
        <!--                      <artifactId>maven-cucumber-reporting</artifactId> -->
        <!--                      <version>0.0.6</version> -->
        <!--                      <executions> -->
        <!--                          <execution> -->
        <!--                              <id>execution</id> -->
        <!--                              <phase>verify</phase> -->
        <!--                              <goals> -->
        <!--                                  <goal>generate</goal> -->
        <!--                              </goals> -->
        <!--                              <configuration> -->
        <!--                                  <projectName>RunBDDTest</projectName> -->
        <!--                                  <outputDirectory>results/html</outputDirectory> -->
        <!--                                  <cucumberOutput>results/json/cucumber-report.json</cucumberOutput> -->
        <!--                              </configuration> -->
        <!--                          </execution> -->
        <!--                      </executions> -->
        <!--                  </plugin> -->

      </plugins>
    </pluginManagement>
  </build>

  <dependencies>

    <dependency>
      <groupId>org.seleniumhq.selenium</groupId>
      <artifactId>selenium-server</artifactId>
      <version>2.53.0</version>
    </dependency>

    <dependency>
      <groupId>org.seleniumhq.selenium</groupId>
      <artifactId>selenium-remote-driver</artifactId>
      <version>2.53.0</version>
    </dependency>
    <!--          <dependency>-->
    <!--              <groupId>io.cucumber</groupId>-->
    <!--              <artifactId>cucumber-junit</artifactId>-->
    <!--              <version>4.7.4</version>-->
    <!--              <scope>test</scope>-->
    <!--          </dependency>-->
    <dependency>
      <groupId>info.cukes</groupId>
      <artifactId>cucumber-junit</artifactId>
      <version>1.2.4</version>

    </dependency>
    <!--         <dependency> -->
    <!--             <groupId>com.googlecode.totallylazy</groupId> -->
    <!--             <artifactId>totallylazy</artifactId> -->
    <!--             <version>991</version> -->
    <!--         </dependency> -->

    <dependency>
      <groupId>com.google.guava</groupId>
      <artifactId>guava</artifactId>
      <version>22.0</version>
    </dependency>


    <!--  <dependency>
          <groupId>org.testng</groupId>
          <artifactId>testng</artifactId>
          <version>6.13</version>
      </dependency>

      <dependency>
          <groupId>info.cukes</groupId>
          <artifactId>cucumber-testng</artifactId>
          <version>1.2.5</version>
      </dependency>-->

    <!--         <dependency> -->
    <!--             <groupId>com.oracle.ojdbc6</groupId> -->
    <!--             <artifactId>ojdbc6</artifactId> -->
    <!--             <version>11.2.0.3.0</version> -->
    <!--         </dependency> -->

    <dependency>
      <groupId>com.vimalselvam</groupId>
      <artifactId>cucumber-extentsreport</artifactId>
      <version>1.1.1</version>
    </dependency>

    <dependency>
      <groupId>info.cukes</groupId>
      <artifactId>cucumber-picocontainer</artifactId>
      <version>1.2.0</version>
    </dependency>

    <dependency>
      <groupId>com.aventstack</groupId>
      <artifactId>extentreports</artifactId>
      <version>3.0.3</version>
    </dependency>

    <dependency>
      <groupId>org.picocontainer</groupId>
      <artifactId>picocontainer</artifactId>
      <version>2.14.3</version>
    </dependency>

    <dependency>
      <groupId>info.cukes</groupId>
      <artifactId>cucumber-java</artifactId>
      <version>1.2.0</version>
    </dependency>

    <dependency>
      <groupId>info.cukes</groupId>
      <artifactId>cucumber-core</artifactId>
      <version>1.2.0</version>
    </dependency>

    <dependency>
      <groupId>info.cukes</groupId>
      <artifactId>cucumber-html</artifactId>
      <version>0.2.3</version>
    </dependency>

    <dependency>
      <groupId>info.cukes</groupId>
      <artifactId>cucumber-jvm-deps</artifactId>
      <version>1.0.3</version>
    </dependency>

    <dependency>
      <groupId>org.apache.velocity</groupId>
      <artifactId>velocity-tools</artifactId>
      <version>2.0</version>
    </dependency>



    <dependency>
      <groupId>net.masterthought</groupId>
      <artifactId>cucumber-reporting</artifactId>
      <version>0.0.23</version>
    </dependency>

    <dependency>
      <groupId>info.cukes</groupId>
      <artifactId>gherkin</artifactId>
      <version>2.12.2</version>
    </dependency>

    <dependency>
      <groupId>info.cukes</groupId>
      <artifactId>gherkin-jvm-deps</artifactId>
      <version>1.0.2</version>
    </dependency>

    <dependency>
      <groupId>org.apache.velocity</groupId>
      <artifactId>velocity</artifactId>
      <version>1.7</version>
    </dependency>

    <dependency>
      <groupId>joda-time</groupId>
      <artifactId>joda-time</artifactId>
      <version>2.9.2</version>
    </dependency>

    <dependency>
      <groupId>com.google.code.gson</groupId>
      <artifactId>gson</artifactId>
      <version>2.6.2</version>
    </dependency>

    <dependency>
      <groupId>net.masterthought</groupId>
      <artifactId>maven-cucumber-reporting</artifactId>
      <version>0.0.6</version>
    </dependency>

    <dependency>
      <groupId>au.com.bytecode</groupId>
      <artifactId>opencsv</artifactId>
      <version>2.4</version>
    </dependency>

    <dependency>
      <groupId>com.codeborne</groupId>
      <artifactId>phantomjsdriver</artifactId>
      <version>1.2.1</version>
    </dependency>


    <dependency>
      <groupId>org.springframework</groupId>
      <artifactId>spring-core</artifactId>
      <version>5.0.11.RELEASE</version>
    </dependency>

    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-web</artifactId>
      <version>2.0.3.RELEASE</version>
    </dependency>



    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-test</artifactId>
      <version>2.0.3.RELEASE</version>

    </dependency>


    <dependency>
      <groupId>info.cukes</groupId>
      <artifactId>cucumber-spring</artifactId>
      <version>1.2.4</version>

    </dependency>

    <dependency>
      <groupId>org.apache.poi</groupId>
      <artifactId>poi</artifactId>
      <version>3.17</version>
    </dependency>
    <dependency>
      <groupId>org.apache.poi</groupId>
      <artifactId>poi-ooxml</artifactId>
      <version>3.17</version>
    </dependency>
    <dependency>
      <groupId>com.googlecode.json-simple</groupId>
      <artifactId>json-simple</artifactId>
      <version>1.1</version>

    </dependency>
    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
      <version>4.12</version>
    </dependency>
  </dependencies>
</project>
